9 March 2007: Wouter
	- added rwlock writelock checking.
	  So it will keep track of the writelock, and readlocks are enforced
	  to not change protected memory areas.

8 March 2007: Wouter
	- Reviewed checklock code.

7 March 2007: Wouter
	- created a wrapper around thread calls that performs some basic
	  checking for data race and deadlock, and basic performance 
	  contention measurement.

6 March 2007: Wouter
	- Testbed works with threading (different machines, different options).
	- alloc work, does the special type.

2 March 2007: Wouter
	- do not compile fork funcs unless needed. Otherwise will give
	  type errors as their typedefs have not been enabled.
	- log shows thread numbers much more nicely (and portably).
	- even on systems with nonthreadsafe libevent signal handling,
	  unbound will exit if given a signal.
	  Reloads will not work, and exit is not graceful.
	- start of alloc framework layout.

1 March 2007: Wouter
	- Signals, libevent and threads work well, with libevent patch and
	  changes to code (close after event_del).
	- set ipc pipes nonblocking.

27 February 2007: Wouter
	- ub_thread_join portable definition.
	- forking is used if no threading is available.
	  Tested, it works, since pipes work across processes as well.
	  Thread_join is replaced with waitpid. 
	- During reloads the daemon will temporarily handle signals,
	  so that they do not result in problems.
	- Also randomize the outgoing port range for tests.
	- If query list is full, will stop selecting listening ports for read.
	  This makes all threads service incoming requests, instead of one.
	  No memory is leaking during reloads, service of queries, etc.
	- test that uses ldns-testns -f to test threading. Have to answer
	  three queries at the same time.
	- with verbose=0 operates quietly.

26 February 2007: Wouter
	- ub_random code used to select ID and port.
	- log code prints thread id.
	- unbound can thread itself, with reload(HUP) and quit working
	  correctly.