@@ -166,3 +166,18 @@ verbose(enum verbosity_value level, const char* format, ...)
 	va_end(args);
 }
 
+void 
+log_hex(const char* msg, void* data, size_t length)
+{
+	size_t i;
+	uint8_t* data8 = (uint8_t*)data;
+	const char const* hexchar = "0123456789ABCDEF";
+	char* buf = malloc(length*2 + 1); /* alloc hex chars + \0 */
+	for(i=0; i<length; i++) {
+		buf[i*2] = hexchar[ data8[i] >> 4 ];
+		buf[i*2 + 1] = hexchar[ data8[i] & 0xF ];
+	}
+	buf[length*2] = 0;
+	log_info("%s[%d] %s", msg, length, buf);
+	free(buf);
+}
